// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Stage page component should render children when passed 1`] = `
<div
  className="govuk-grid-row"
>
  <div
    className="govuk-grid-column-one-half"
  >
    <h1
      className="govuk-heading-m"
    >
      <span
        className="govuk-caption-l"
      />
    </h1>
    FORM
  </div>
  <div
    className="govuk-grid-column-one-half"
  >
    <WrappedSideBar />
  </div>
</div>
`;

exports[`Stage page component should render with default props 1`] = `
<div
  className="govuk-grid-row"
>
  <div
    className="govuk-grid-column-one-half"
  >
    <h1
      className="govuk-heading-m"
    >
      <span
        className="govuk-caption-l"
      />
    </h1>
  </div>
  <div
    className="govuk-grid-column-one-half"
  >
    <WrappedSideBar />
  </div>
</div>
`;

exports[`Stage page component should render with subTitle when passed in props 1`] = `
<div
  className="govuk-grid-row"
>
  <div
    className="govuk-grid-column-one-half"
  >
    <h1
      className="govuk-heading-m"
    >
      ABC123
      <span
        className="govuk-caption-l"
      />
    </h1>
  </div>
  <div
    className="govuk-grid-column-one-half"
  >
    <WrappedSideBar />
  </div>
</div>
`;

exports[`Stage page component should render with title when passed in props 1`] = `
<div
  className="govuk-grid-row"
>
  <div
    className="govuk-grid-column-one-half"
  >
    <h1
      className="govuk-heading-m"
    >
      <span
        className="govuk-caption-l"
      >
        MY_TITLE
      </span>
    </h1>
  </div>
  <div
    className="govuk-grid-column-one-half"
  >
    <WrappedSideBar />
  </div>
</div>
`;
